Clean code: remove old unused code and move sources in directories. Migrate ProgremGrid to ProgremGridComponent

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -13,7 +13,7 @@
             display: grid;
         }
 
-        .codeContainer {
+        .progrem-inspector-component {
             grid-column-start: 1;
             grid-column-end: 4;
             grid-row: 1;
@@ -118,10 +118,9 @@
 <body>
     <h1 class="titre"></h1>
 
-    <canvas class="progrem">
-        <p>Your browser doesn't support canvas.</p>
-        <p>Votre navigateur ne supporte pas les canvas.</p>
-    </canvas>
+    <div class="progrem-grid-component">
+
+    </div>
 
     <br/><br/>
 
@@ -136,7 +135,7 @@
 
     <br/><br/>
 
-    <div class="code codeContainer"></div>
+    <div class="progrem-inspector-component"></div>
     
 </body>
 </html>
