Add RxJs. Add a blink for current pixel wich will be colored in grid.

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -14,7 +14,7 @@
         }
 
         .progrem-grid-component canvas {
-            border: 6px double maroon;
+            border: 32px ridge maroon;
         }
 
         .progrem-inspector-component {
@@ -24,7 +24,7 @@
             padding: 0;
             overflow: hidden;
             text-align: left;
-            font-size: 1.2em;
+            font-size: 1em;
         }
 
         .hintContainer {
@@ -34,7 +34,7 @@
             padding: 0;
             overflow: hidden;
             text-align: left;
-            font-size: 1.2em;
+            font-size: 1em;
             max-width: 400px;
         }
 
@@ -107,7 +107,7 @@
             display: block;
         }
         .verse-content {
-            padding: 2 5px;
+            padding: 0.1em 0.5em 0.1em 1em;
             border: 1px solid transparent;
         }
         .verse-executing .verse-content {
