--- a/src/index.ejs
+++ b/src/index.ejs
@@ -9,7 +9,7 @@
             text-align: center;
         }
 
-        div.code {
+        div.grid {
             display: grid;
         }
 
@@ -27,7 +27,7 @@
             font-size: 1em;
         }
 
-        .hintContainer {
+        .variable-scope-component {
             grid-column-start: 5;
             grid-column-end: 6;
             grid-row: 1;
@@ -35,9 +35,17 @@
             overflow: hidden;
             text-align: left;
             font-size: 1em;
-            max-width: 400px;
+            width: 400px;
         }
 
+        .variable-scope-component .variable {
+            display: block;
+            padding: 0.1em 0.5em 0.1em 1em;
+            margin: 0.1em 0.5em 0.1em 1em;
+            border: 1px solid black;
+        }   
+
+/*
         .codeContainer pre, .hintContainer pre {
             margin: 10px;
         }
@@ -59,10 +67,6 @@
             content: "    ";
         }
 
-        .codeContainer .highlight {
-            /* background-color: orange; */
-        }
-
         .codeContainer .highlight::before {
             content: " => ";
             color: orangered;
@@ -81,7 +85,7 @@
         .codeContainer .padding-3 {
             padding-left: 9em;
         }
-
+*/
 /*
         .code-padding {
             margin-left: 32px;
@@ -139,7 +143,11 @@
 
     <br/><br/>
 
-    <div class="progrem-inspector-component"></div>
-    
+    <div class="grid">
+        <div class="progrem-inspector-component"></div>
+
+        <div class="variable-scope-component"></div>
+    </div>
+
 </body>
 </html>
