--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,126 +1,7 @@
 <html lang="FR" >
 <head>
     <meta charset="UTF-8"> 
-    <style>
-        body {
-            margin: 0;
-            overflow-x: hidden;
-            padding: 0;
-            text-align: center;
-        }
-
-        div.grid {
-            display: grid;
-        }
-
-        .progrem-grid-component canvas {
-            border: 32px ridge maroon;
-        }
-
-        .progrem-inspector-component {
-            grid-column-start: 1;
-            grid-column-end: 4;
-            grid-row: 1;
-            padding: 0;
-            overflow: hidden;
-            text-align: left;
-            font-size: 1em;
-        }
-
-        .variable-scope-component {
-            grid-column-start: 5;
-            grid-column-end: 6;
-            grid-row: 1;
-            padding: 0;
-            overflow: hidden;
-            text-align: left;
-            font-size: 1em;
-            width: 400px;
-        }
-
-        .variable-scope-component .variable {
-            display: block;
-            padding: 0.1em 0.5em 0.1em 1em;
-            margin: 0.1em 0.5em 0.1em 1em;
-            border: 1px solid black;
-        }   
-
-/*
-        .codeContainer pre, .hintContainer pre {
-            margin: 10px;
-        }
-
-        .codeContainer pre span {
-            padding: 0.2em 0;
-        }
-
-        .hintContainer pre span {
-            padding: 0.2em 0.5em;
-        }
-
-        .codeContainer pre span.varId {
-            padding-left: 0.5em;
-            padding-right: 0.5em;
-        }
-
-        .codeContainer pre::before {
-            content: "    ";
-        }
-
-        .codeContainer .highlight::before {
-            content: " => ";
-            color: orangered;
-            background-color: chartreuse;
-            font-weight: bolder;
-        }
-
-        .codeContainer .padding-1 {
-            padding-left: 3em;
-        }
-
-        .codeContainer .padding-2 {
-            padding-left: 6em;
-        }
-
-        .codeContainer .padding-3 {
-            padding-left: 9em;
-        }
-*/
-/*
-        .code-padding {
-            margin-left: 32px;
-        }
-
-        .block {
-            display: block;
-        }
-
-        .statement, .declaration {
-            display: block;
-        }
-*/
-
-        .operator {
-            margin: 0 10px;
-        }
-
-        .progrem-inspector * {
-            display: inline-block;
-        }
-        .verse-container {
-            display: block;
-        }
-        .verse-content {
-            padding: 0.1em 0.5em 0.1em 1em;
-            border: 1px solid transparent;
-        }
-        .verse-executing .verse-content {
-            background-color: yellow;
-        }
-        .verse-executed .verse-content {
-            background-color: whitesmoke;
-        }
-      </style>
+    <link rel="stylesheet" type="text/css" href="./bundle.css" media="screen" />
 </head>
 
 <body>
