Add progrem-editor component with refresh button.

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -30,5 +30,34 @@
         <div class="variable-scope-component"></div>
     </div>
 
+    <div class="progrem-editor-component">
+        <h2>Editer un Progrem</h2>
+
+        <button class="refresh-action">Refresh</button>
+
+        <div class="colorer-progrem-editor">
+            <p class="function-declaration">function colorerProgrem(colonne, ligne, contexte) {</p>
+                <textarea>
+        
+                </textarea>
+            <p class="function-end">}</p>
+        </div>
+
+        <div class="init-progrem-editor">
+            <p class="function-declaration">function initialiserProgrem(cadreLargeur, cadreHauteur) {</p>
+            <textarea>
+
+            </textarea>
+            <p class="function-end">}</p>
+        </div>
+
+        <div class="code-libre-editor">
+            <p>Code libre</p>
+            <textarea>
+    
+            </textarea>
+        </div>
+    </div>
+
 </body>
 </html>
