Add a basic HTML select elt to choose a progrem.

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -26,7 +26,10 @@
     <div class="control-panel-component">
         <div><label>Mode:</label><input class="mode-selector" type="range" min="0" max="3" step="1"></div>
         <div><label>Vitesse:</label><input class="speed-selector" type="range" min="0" max="6" step="1"></div>
-        
+        <div>
+            <select class="progrem-selector">
+            </select>
+        </div>
     </div>
 
     <div class="grid">
